dataset1235/2025-2/1153765216/users/3894411613/executions/3138746197_146336312.log
== RUN (2025-08-15 23:16:20)
-- CODE: 
print(round(50/3 ,0))
print(50/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:17:06)
-- CODE: 
print(round(50/3 ,0))
print(round(50/4 ,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:13:12)
-- CODE: 
print(50/3)
print(50/3 + 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:19:29)
-- CODE: 
print(50/3)
print(50/3 % 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:15:37)
-- CODE: 
print(50/3)
print(50/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:17:50)
-- CODE: 
print(round(50/4 ,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:15:02)
-- CODE: 
print(round(50/3, 2))
print(round(50/4 ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:15:05)
-- CODE: 
print(round(50/3, 2))
print(round(50/4 ,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:23:40)
-- CODE: 
print(50 // 3)
print(50 % 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:16:02)
-- CODE: 
print(round(50/3 ,0)
print(50/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(round(50/3 ,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(round(50/3 ,0)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:13:29)
-- CODE: 
print(50/3)
print(50/3 + 1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.666666666666668
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:16:54)
-- CODE: 
print(round(50/3 ,0))
print(round(50/4 ,0))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:24:01)
-- CODE: 
print(50 // 3)
print(50 % 4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:23:58)
-- CODE: 
print(50 // 3)
print(50 % 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:14:13)
-- CODE: 
print(50/3, 2)
print(50/4 ,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:16:09)
-- CODE: 
print(round(50/3 ,0))
print(50/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 23:16:53)
-- CODE: 
print(round(50/3 ,0))
print(round(50/4 ,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:19:33)
-- CODE: 
print(50/3)
print(50/3 % 1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:23:44)
-- CODE: 
print(50 // 3)
print(50 % 3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 23:16:17)
-- CODE: 
print(round(50/3 ,0))
print(50/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
